--- a/Makefile.in
+++ b/Makefile.in
@@ -216,27 +216,27 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	editusfm/load.$(OBJEXT) editusfm/offset.$(OBJEXT) \
 	editusfm/save.$(OBJEXT) editor/styles.$(OBJEXT) \
 	editor/html2usfm.$(OBJEXT) editor/usfm2html.$(OBJEXT) \
-	editor/select.$(OBJEXT) edit/edit.$(OBJEXT) edit/id.$(OBJEXT) \
-	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
-	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
-	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
-	edit/navigate.$(OBJEXT) edit2/edit.$(OBJEXT) \
-	edit2/id.$(OBJEXT) edit2/index.$(OBJEXT) edit2/load.$(OBJEXT) \
-	edit2/save.$(OBJEXT) edit2/styles.$(OBJEXT) \
-	edit2/logic.$(OBJEXT) edit2/preview.$(OBJEXT) \
-	edit2/position.$(OBJEXT) edit2/navigate.$(OBJEXT) \
-	search/all.$(OBJEXT) search/index.$(OBJEXT) \
-	search/replace.$(OBJEXT) search/getids.$(OBJEXT) \
-	search/replacepre.$(OBJEXT) search/replacego.$(OBJEXT) \
-	search/search2.$(OBJEXT) search/replace2.$(OBJEXT) \
-	search/replacepre2.$(OBJEXT) search/getids2.$(OBJEXT) \
-	search/replacego2.$(OBJEXT) search/similar.$(OBJEXT) \
-	search/strongs.$(OBJEXT) search/strong.$(OBJEXT) \
-	search/originals.$(OBJEXT) tmp/tmp.$(OBJEXT) \
-	workspace/index.$(OBJEXT) workspace/logic.$(OBJEXT) \
-	workspace/settings.$(OBJEXT) workspace/organize.$(OBJEXT) \
-	sendreceive/logic.$(OBJEXT) sendreceive/index.$(OBJEXT) \
-	sendreceive/sendreceive.$(OBJEXT) \
+	editor/select.$(OBJEXT) editor/html2format.$(OBJEXT) \
+	edit/edit.$(OBJEXT) edit/id.$(OBJEXT) edit/index.$(OBJEXT) \
+	edit/load.$(OBJEXT) edit/save.$(OBJEXT) edit/styles.$(OBJEXT) \
+	edit/logic.$(OBJEXT) edit/preview.$(OBJEXT) \
+	edit/position.$(OBJEXT) edit/navigate.$(OBJEXT) \
+	edit2/edit.$(OBJEXT) edit2/id.$(OBJEXT) edit2/index.$(OBJEXT) \
+	edit2/load.$(OBJEXT) edit2/save.$(OBJEXT) \
+	edit2/styles.$(OBJEXT) edit2/logic.$(OBJEXT) \
+	edit2/preview.$(OBJEXT) edit2/position.$(OBJEXT) \
+	edit2/navigate.$(OBJEXT) search/all.$(OBJEXT) \
+	search/index.$(OBJEXT) search/replace.$(OBJEXT) \
+	search/getids.$(OBJEXT) search/replacepre.$(OBJEXT) \
+	search/replacego.$(OBJEXT) search/search2.$(OBJEXT) \
+	search/replace2.$(OBJEXT) search/replacepre2.$(OBJEXT) \
+	search/getids2.$(OBJEXT) search/replacego2.$(OBJEXT) \
+	search/similar.$(OBJEXT) search/strongs.$(OBJEXT) \
+	search/strong.$(OBJEXT) search/originals.$(OBJEXT) \
+	tmp/tmp.$(OBJEXT) workspace/index.$(OBJEXT) \
+	workspace/logic.$(OBJEXT) workspace/settings.$(OBJEXT) \
+	workspace/organize.$(OBJEXT) sendreceive/logic.$(OBJEXT) \
+	sendreceive/index.$(OBJEXT) sendreceive/sendreceive.$(OBJEXT) \
 	sendreceive/settings.$(OBJEXT) sendreceive/bibles.$(OBJEXT) \
 	sendreceive/notes.$(OBJEXT) sendreceive/changes.$(OBJEXT) \
 	sendreceive/files.$(OBJEXT) sendreceive/resources.$(OBJEXT) \
@@ -389,7 +389,7 @@ am_unittest_OBJECTS = unittests/unittest.$(OBJEXT) \
 	unittests/privileges.$(OBJEXT) unittests/statistics.$(OBJEXT) \
 	unittests/webview.$(OBJEXT) unittests/javascript.$(OBJEXT) \
 	unittests/french.$(OBJEXT) unittests/merge.$(OBJEXT) \
-	unittests/nmt.$(OBJEXT)
+	unittests/nmt.$(OBJEXT) unittests/html2format.$(OBJEXT)
 unittest_OBJECTS = $(am_unittest_OBJECTS)
 unittest_DEPENDENCIES = libbibledit.a
 AM_V_P = $(am__v_P_@AM_V@)
@@ -487,14 +487,14 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	editone/$(DEPDIR)/verse.Po editone2/$(DEPDIR)/index.Po \
 	editone2/$(DEPDIR)/load.Po editone2/$(DEPDIR)/logic.Po \
 	editone2/$(DEPDIR)/save.Po editone2/$(DEPDIR)/update.Po \
-	editone2/$(DEPDIR)/verse.Po editor/$(DEPDIR)/html2usfm.Po \
-	editor/$(DEPDIR)/select.Po editor/$(DEPDIR)/styles.Po \
-	editor/$(DEPDIR)/usfm2html.Po editusfm/$(DEPDIR)/focus.Po \
-	editusfm/$(DEPDIR)/index.Po editusfm/$(DEPDIR)/load.Po \
-	editusfm/$(DEPDIR)/offset.Po editusfm/$(DEPDIR)/save.Po \
-	email/$(DEPDIR)/index.Po email/$(DEPDIR)/receive.Po \
-	email/$(DEPDIR)/send.Po esword/$(DEPDIR)/text.Po \
-	executable/$(DEPDIR)/bibledit.Po \
+	editone2/$(DEPDIR)/verse.Po editor/$(DEPDIR)/html2format.Po \
+	editor/$(DEPDIR)/html2usfm.Po editor/$(DEPDIR)/select.Po \
+	editor/$(DEPDIR)/styles.Po editor/$(DEPDIR)/usfm2html.Po \
+	editusfm/$(DEPDIR)/focus.Po editusfm/$(DEPDIR)/index.Po \
+	editusfm/$(DEPDIR)/load.Po editusfm/$(DEPDIR)/offset.Po \
+	editusfm/$(DEPDIR)/save.Po email/$(DEPDIR)/index.Po \
+	email/$(DEPDIR)/receive.Po email/$(DEPDIR)/send.Po \
+	esword/$(DEPDIR)/text.Po executable/$(DEPDIR)/bibledit.Po \
 	executable/$(DEPDIR)/generate.Po \
 	export/$(DEPDIR)/bibledropbox.Po export/$(DEPDIR)/esword.Po \
 	export/$(DEPDIR)/html.Po export/$(DEPDIR)/index.Po \
@@ -657,12 +657,12 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	unittests/$(DEPDIR)/etcbc4.Po unittests/$(DEPDIR)/export.Po \
 	unittests/$(DEPDIR)/flate.Po unittests/$(DEPDIR)/folders.Po \
 	unittests/$(DEPDIR)/french.Po unittests/$(DEPDIR)/git.Po \
-	unittests/$(DEPDIR)/html.Po unittests/$(DEPDIR)/html2usfm.Po \
-	unittests/$(DEPDIR)/http.Po unittests/$(DEPDIR)/hyphenate.Po \
-	unittests/$(DEPDIR)/ipc.Po unittests/$(DEPDIR)/javascript.Po \
-	unittests/$(DEPDIR)/jobs.Po unittests/$(DEPDIR)/json.Po \
-	unittests/$(DEPDIR)/kjv.Po unittests/$(DEPDIR)/ldap.Po \
-	unittests/$(DEPDIR)/lexicon.Po \
+	unittests/$(DEPDIR)/html.Po unittests/$(DEPDIR)/html2format.Po \
+	unittests/$(DEPDIR)/html2usfm.Po unittests/$(DEPDIR)/http.Po \
+	unittests/$(DEPDIR)/hyphenate.Po unittests/$(DEPDIR)/ipc.Po \
+	unittests/$(DEPDIR)/javascript.Po unittests/$(DEPDIR)/jobs.Po \
+	unittests/$(DEPDIR)/json.Po unittests/$(DEPDIR)/kjv.Po \
+	unittests/$(DEPDIR)/ldap.Po unittests/$(DEPDIR)/lexicon.Po \
 	unittests/$(DEPDIR)/localization.Po unittests/$(DEPDIR)/log.Po \
 	unittests/$(DEPDIR)/login.Po unittests/$(DEPDIR)/mail.Po \
 	unittests/$(DEPDIR)/md5.Po unittests/$(DEPDIR)/memory.Po \
@@ -1132,6 +1132,7 @@ libbibledit_a_SOURCES = \
 	editor/html2usfm.cpp \
 	editor/usfm2html.cpp \
 	editor/select.cpp \
+  editor/html2format.cpp \
 	edit/edit.cpp \
 	edit/id.cpp \
 	edit/index.cpp \
@@ -1459,7 +1460,8 @@ unittest_SOURCES = \
 	unittests/javascript.cpp \
 	unittests/french.cpp \
   unittests/merge.cpp \
-  unittests/nmt.cpp
+  unittests/nmt.cpp \
+  unittests/html2format.cpp
 
 unittest_LDADD = libbibledit.a
 generate_SOURCES = \
@@ -2276,6 +2278,8 @@ editor/html2usfm.$(OBJEXT): editor/$(am__dirstamp) \
 editor/usfm2html.$(OBJEXT): editor/$(am__dirstamp) \
 	editor/$(DEPDIR)/$(am__dirstamp)
 editor/select.$(OBJEXT): editor/$(am__dirstamp) \
+	editor/$(DEPDIR)/$(am__dirstamp)
+editor/html2format.$(OBJEXT): editor/$(am__dirstamp) \
 	editor/$(DEPDIR)/$(am__dirstamp)
 edit/$(am__dirstamp):
 	@$(MKDIR_P) edit
@@ -3166,6 +3170,8 @@ unittests/merge.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
 unittests/nmt.$(OBJEXT): unittests/$(am__dirstamp) \
 	unittests/$(DEPDIR)/$(am__dirstamp)
+unittests/html2format.$(OBJEXT): unittests/$(am__dirstamp) \
+	unittests/$(DEPDIR)/$(am__dirstamp)
 
 unittest$(EXEEXT): $(unittest_OBJECTS) $(unittest_DEPENDENCIES) $(EXTRA_unittest_DEPENDENCIES) 
 	@rm -f unittest$(EXEEXT)
@@ -3403,6 +3409,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/save.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/update.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/verse.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/html2format.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/html2usfm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/select.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/styles.Po@am__quote@ # am--include-marker
@@ -3722,6 +3729,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/french.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/git.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/html.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/html2format.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/html2usfm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/http.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unittests/$(DEPDIR)/hyphenate.Po@am__quote@ # am--include-marker
@@ -4472,6 +4480,7 @@ distclean: distclean-am
 	-rm -f editone2/$(DEPDIR)/save.Po
 	-rm -f editone2/$(DEPDIR)/update.Po
 	-rm -f editone2/$(DEPDIR)/verse.Po
+	-rm -f editor/$(DEPDIR)/html2format.Po
 	-rm -f editor/$(DEPDIR)/html2usfm.Po
 	-rm -f editor/$(DEPDIR)/select.Po
 	-rm -f editor/$(DEPDIR)/styles.Po
@@ -4791,6 +4800,7 @@ distclean: distclean-am
 	-rm -f unittests/$(DEPDIR)/french.Po
 	-rm -f unittests/$(DEPDIR)/git.Po
 	-rm -f unittests/$(DEPDIR)/html.Po
+	-rm -f unittests/$(DEPDIR)/html2format.Po
 	-rm -f unittests/$(DEPDIR)/html2usfm.Po
 	-rm -f unittests/$(DEPDIR)/http.Po
 	-rm -f unittests/$(DEPDIR)/hyphenate.Po
@@ -5054,6 +5064,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f editone2/$(DEPDIR)/save.Po
 	-rm -f editone2/$(DEPDIR)/update.Po
 	-rm -f editone2/$(DEPDIR)/verse.Po
+	-rm -f editor/$(DEPDIR)/html2format.Po
 	-rm -f editor/$(DEPDIR)/html2usfm.Po
 	-rm -f editor/$(DEPDIR)/select.Po
 	-rm -f editor/$(DEPDIR)/styles.Po
@@ -5373,6 +5384,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f unittests/$(DEPDIR)/french.Po
 	-rm -f unittests/$(DEPDIR)/git.Po
 	-rm -f unittests/$(DEPDIR)/html.Po
+	-rm -f unittests/$(DEPDIR)/html2format.Po
 	-rm -f unittests/$(DEPDIR)/html2usfm.Po
 	-rm -f unittests/$(DEPDIR)/http.Po
 	-rm -f unittests/$(DEPDIR)/hyphenate.Po
