refactoring and cleanup
https://github.com/bibledit/cloud/issues/438

--- a/Makefile.am
+++ b/Makefile.am
@@ -182,7 +182,7 @@ libbibledit_a_SOURCES = \
 	compare/index.cpp \
 	compare/compare.cpp \
 	jobs/index.cpp \
-	editone/index.cpp \
+	redirect/index.cpp \
   editone2/index.cpp \
   editone2/load.cpp \
   editone2/save.cpp \
